--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,14 +1,13 @@
 FROM mcr.microsoft.com/vscode/devcontainers/java:0-11
 
-ARG INSTALL_MAVEN="true"
-ARG MAVEN_VERSION=""
-
-ARG INSTALL_GRADLE="false"
-ARG GRADLE_VERSION=""
-
-ARG INSTALL_GRAALVM="true"
 ARG GRAALVM_VERSION="21.1.0.r11-grl"
 
-RUN if [ "${INSTALL_MAVEN}" = "true" ]; then su vscode -c "umask 0002 && . /usr/local/sdkman/bin/sdkman-init.sh && sdk install maven \"${MAVEN_VERSION}\""; fi \
-	&& if [ "${INSTALL_GRADLE}" = "true" ]; then su vscode -c "umask 0002 && . /usr/local/sdkman/bin/sdkman-init.sh && sdk install gradle \"${GRADLE_VERSION}\""; fi \
-	&& if [ "${INSTALL_GRAALVM}" = "true" ]; then su vscode -c "umask 0002 && . /usr/local/sdkman/bin/sdkman-init.sh && sdk install java \"${GRAALVM_VERSION}\""; fi
+RUN DEBIAN_FRONTEND=noninteractive apt-get update \
+  && apt-get install -qq -y --no-install-recommends build-essential libz-dev zlib1g-dev \
+  && apt-get autoremove -y \
+  && apt-get clean -y \
+  && rm -rf /var/lib/apt/lists/*
+
+RUN su vscode -c "umask 0002 && . /usr/local/sdkman/bin/sdkman-init.sh && sdk install maven"
+RUN su vscode -c "umask 0002 && . /usr/local/sdkman/bin/sdkman-init.sh && sdk install java \"${GRAALVM_VERSION}\""
+RUN su vscode -c "/usr/local/sdkman/candidates/java/current/bin/gu install native-image"
