--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
   <licenses>
     <license>
       <name>MIT License</name>
-      <url>http://www.opensource.org/licenses/mit-license.php</url>
+      <url>https://github.com/ghokun/posa/blob/main/LICENSE</url>
       <distribution>repo</distribution>
     </license>
   </licenses>
